# audio-to-score

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: analysis.py  score.py  stems.py  upload.py
backend/app/core/: audio_loader.py  normalizer.py  segmenter.py  stem_separator.py
backend/app/export/: __init__.py  base.py  factory.py  midi.py  musicxml.py  pdf.py  router.py  schemas.py  utils.py
backend/app/models/: schemas.py
backend/app/music/: instrument_mapper.py  key_detection.py  pitch_detection.py  rhythm_quantizer.py  tempo.py  voice_splitter.py
backend/app/score/: articulations.py  clef_selector.py  notation_rules.py  xml_builder.py
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  worker.Dockerfile
docs/: api.md  musical_rules.md  realism_criteria.md  roadmap.md
frontend/: package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: main.tsx  package.json
frontend/src/app/: App.tsx  router.tsx  store.ts
frontend/src/components/: AudioUploader.tsx  ExportButtons.tsx  InstrumentSelector.tsx  StemCheckbox.tsx  TempoKeyDisplay.tsx  (+1 more)
shared/: music_schemas.py  music_types.ts
storage/: .gitignore
storage/exports/: README.md
storage/scores/: README.md  score_schema.json
storage/segments/: README.md  segments.json
storage/stems/: README.md
storage/uploads/: README.md
workers/: requirements.txt
workers/tasks/: __init__.py  analysis.py  celery_app.py  export.py  scoring.py  separation.py
(+13 files in other folders)
